# tagsoup-etna

./: .gitignore  BUGS.md  README.etna.md  TASKS.md  cabal.project  etna.toml  steps.json
etna/: etna-runner.cabal
etna/app/: Main.hs
etna/src/Etna/: Properties.hs  Result.hs  Witnesses.hs
etna/src/Etna/Gens/: Falsify.hs  Hedgehog.hs  QuickCheck.hs  SmallCheck.hs
etna/test/: Witnesses.hs
patches/: chr_oob_overflow_synth_1.patch  escape_quote_xml_f37c174_1.patch  uppercase_hex_entity_6cd85ac6_1.patch
src/Text/HTML/TagSoup/: Entity.hs
